added rendering of expenses
